# review-summarizer-mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  create_bigquery_tables.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
airflow_scheduler/: Dockerfile  README.md  deploy.sh  main.py  test_api.py
api/: endpoints.py
core/: data_parser.py  summarizer.py
evaluation/: evaluate_summaries.py  product_summaries.py  second_stage_evaluaition.py  summarize_concatenated.py  summarized_products.csv  test_product_dataset.csv  test_product_dataset_concatenated.csv
frontend/: deploy.sh  package-lock.json  package.json
gcs_to_bq_loader/: main.py  requirements.txt
lanchain_summarize/: data_processor.py  data_processor_2.py  fake_video_data.csv  telegram_bot.py  video_data.csv
llm_judge_api/: Dockerfile  README.md  deploy.sh  main.py  requirements.txt
misc/: cleanup_buckets.sh  create_bigquery_tables.sh  test_log.json  update_bigquery_schemas.sh
models/: schemas.py
product_query_api/: Dockerfile  README.md  deploy.sh  main.py  requirements.txt
product_summary_api/: Dockerfile  README.md  deploy.sh  main.py  requirements.txt
schemas/: product_summaries_schema.json  search_logs_schema.json  video_metadata_schema.json
search_log_api/: README.md  main.py  requirements.txt
telegram_bot/: Dockerfile  bot.py  requirements.txt  telegram_bot.py
tests/: test_api.py  test_basic.py  test_main.py
youtube-api/: Dockerfile  README.md  __init__.py  env.example  requirements.txt
youtube_data_processor/: Dockerfile  README.md  deploy.sh  main.py  requirements.txt  test_data.json  test_filename_parsing.py
youtube_product_aggregator/: Dockerfile  README.md  deploy.sh  main.py  requirements.txt
youtube_search_api/: .dockerignore  Dockerfile  Makefile  (+8 more)
(+37 files in other folders)
