[project]
name = "review-summarizer-mlops"
version = "0.1.0"
description = "Summarizes product reviews and transcripts using LLMs"
authors = [
    { name = "Xavier Eugenio Asuncion", email = "ginoasuncion@gmail.com" },
    { name = "Irakli Kereleishvili", email = "kereleishviliirakli81@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "python-dotenv"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
packages = { find = { where = ["src"] } }

