[project]
name = "review-summarizer-mlops"
version = "0.1.0"
description = "Summarizes product reviews and transcripts using LLMs"
authors = [
    { name = "Xavier Eugenio Asuncion", email = "ginoasuncion@gmail.com" },
    { name = "Irakli Kereleishvili", email = "kereleishviliirakli81@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pytest",
    "mypy"
]

[tool.setuptools.packages.find]
where = ["."]
[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["build/"]
